--- a/text-folder/复盘笔记.md
+++ b/text-folder/复盘笔记.md
@@ -1,7 +1,7 @@
 ## 第一次作业：
 ### 第一题：
 #### 思路：
-跨行列表格可以见[html笔记中的表格的跨行与跨列](https://github.com/inabananami/obsidian-backup/blob/main/text-folder/html%E7%AC%94%E8%AE%B0%E6%95%B4%E5%90%88/HTML%E7%AC%94%E8%AE%B0.md####（3）表格的跨行与跨列)
+跨行列表格可以见[html笔记中的表格的跨行与跨列](https://github.com/inabananami/obsidian-backup/blob/main/text-folder/html%E7%AC%94%E8%AE%B0%E6%95%B4%E5%90%88/HTML%E7%AC%94%E8%AE%B0.md#3%E8%A1%A8%E6%A0%BC%E7%9A%84%E8%B7%A8%E8%A1%8C%E4%B8%8E%E8%B7%A8%E5%88%97)
 表格中写表单的思路借鉴了列表中可以嵌套`<a>`超链接的特性。
 表格边框借用了css来写样式。
 #### 不足之处：
