--- a/复盘笔记.md
+++ b/复盘笔记.md
@@ -1,7 +1,7 @@
 ## 第一次作业：
 ### 第一题：
 #### 思路：
-跨行列表格可以见[html笔记中的表格的跨行与跨列](HTML笔记####（3）表格的跨行与跨列)
+跨行列表格可以见[html笔记中的表格的跨行与跨列](HTML笔记.md####（3）表格的跨行与跨列)
 表格中写表单的思路借鉴了列表中可以嵌套`<a>`超链接的特性。
 表格边框借用了css来写样式。
 #### 不足之处：
