--- a/java笔记/10.Java笔记_jdk8新时间_arrays.md
+++ b/java笔记/10.Java笔记_jdk8新时间_arrays.md
@@ -1,4 +1,4 @@
-[接Java笔记day9 >](./Java笔记day9.md)
+[接Java笔记_常用API拓展 >](9.Java笔记_常用API拓展.md)
 
 ### 学习内容
 本日主要学习了JDK8新时间。
@@ -249,3 +249,219 @@ LocalDateTime date = LocalDateTime.parse(dateStr, formatter);
 System.out.println(date);
 ```
 ## 5）Period
+计算两段时间相差的年数、月数、天数。
+
+代码示例：
+```java
+package D7_Period;
+
+import java.time.LocalDate;
+import java.time.Period;
+
+public class D7_Period {
+    public static void main(String[] args) {
+        LocalDate start = LocalDate.of(2029, 8, 10);
+        LocalDate end = LocalDate.of(2029, 9, 10);
+
+        //Periodオブジェクトを作成する
+        Period period = Period.between(start, end);
+
+        //periodオブジェクトに通じて、二つの日付オブジェクトの情報の違いを獲得する
+        System.out.println(period.getYears());
+        System.out.println(period.getMonths());
+        System.out.println(period.getDays());
+    }
+}
+```
+## 6）Duration
+计算两个时间对象相差的天数、小时数、分数、秒数、毫秒数、纳秒数。
+
+代码示例：
+```java
+package D8_duration;  
+  
+import java.time.Duration;  
+import java.time.LocalDateTime;  
+  
+public class Test {  
+    public static void main(String[] args) {  
+        LocalDateTime start = LocalDateTime.of(2025, 11, 11, 11, 11, 10);  
+        LocalDateTime end = LocalDateTime.of(2025, 11, 11, 11, 11, 12);  
+  
+        //durationオブジェクトを獲得する  
+        Duration duration = Duration.between(start, end);  
+  
+        //二つの時間オブジェクト間隔の情報を獲得する  
+        System.out.println(duration.toDays());  
+        System.out.println(duration.toHours());  
+        System.out.println(duration.toMinutes());  
+        System.out.println(duration.toSeconds());  
+        System.out.println(duration.toMillis());  
+        System.out.println(duration.toNanos());  
+    }  
+}
+```
+# 二、Arrays
+用来操作数组的工具类。
+
+代码示例：
+```java
+import java.lang.reflect.Array;
+import java.util.Arrays;
+import java.util.function.IntToDoubleFunction;
+
+public class ArraysTest1 {
+    public static void main(String[] args) {
+        //配列の内容を返す
+        int[] arr = {10, 20, 30, 40, 50, 60};
+        System.out.println(Arrays.toString(arr));
+
+        //配列をコピー（指定された範囲で、前のものを含んだが、後ろのを含まない）
+        int[] arr2 = Arrays.copyOfRange(arr, 0, 4);
+        System.out.println(Arrays.toString(arr2));
+
+        //配列をコピー、新しい配列の長さを指定できる
+        int[] arr3 = Arrays.copyOf(arr, 5);
+        System.out.println(Arrays.toString(arr3));
+
+        //配列の元のデータを新しいものに直して保存する
+        double[] prices = {99.8, 9.98, 99.9, 999.9, 87.5};
+        //すべての価格を八割にして、保存する
+        Arrays.setAll(prices, new IntToDoubleFunction() {
+            @Override
+            public double applyAsDouble(int value) {
+                return prices[value] * 0.8;
+            }
+        });
+        System.out.println(Arrays.toString(prices));
+
+        //配列を並び替え
+        int[] arr10 = {1, 3, 2, 10, 1000, 200, 450, 80, 90};
+        Arrays.sort(arr10);
+        System.out.println(Arrays.toString(arr10));
+    }
+}
+```
+## 2）对对象进行排序
+#### 方式一：实现comparable接口，重写compareTo方法，自己来指定规则。
+代码示例：
+```java
+//Test Main类
+import java.util.Arrays;  
+  
+public class ArraysTest2 {  
+    public static void main(String[] args) {  
+        Student[] students = new Student[10];  
+        students[0] = new Student("佐藤さん", 175.5, 22);  
+        students[1] = new Student("諏訪さん",  154, 19);  
+        students[2] = new Student("後藤さん", 155, 16);  
+        students[3] = new Student("上原さん", 162, 17);  
+  
+        Arrays.sort(students, 0, 4);  
+        System.out.println(Arrays.toString(students));  
+    }  
+}
+
+//Student类
+public class Student implements Comparable<Student> {  
+    private String name;  
+    private double height;  
+    private int age;  
+  
+    public Student() {}  
+  
+    public Student(String name, double height, int age) {  
+        this.name = name;  
+        this.height = height;  
+        this.age = age;  
+    }  
+  
+    public String getName() { return name; };  
+    public void setName(String name) { this.name = name; }  
+  
+    public double getHeight() { return height; };  
+    public void setHeight(double height) { this.height = height; }  
+  
+    public int getAge() { return age; }  
+    public void setAge(int age) { this.age = age; }  
+  
+    //this o  
+    @Override  
+    public int compareTo(Student o) {  
+        //約束１：左のオブジェクトは右のものより大きい　正整数を返してください  
+        //約束２：左のオブジェクトは右のものより小さい　負整数を返してください  
+        //約束３：左のオブジェクト＝右のもの　０を返してください  
+        if(this.age > o.age) {  
+            return 1;  
+        } else if(this.age < o.age) {  
+            return -1;  
+        }  
+        return 0;  
+	    //方法２
+	    return this.age - o.age; //昇順
+	    return o.age - this.age; //　
+    }  
+  
+    @Override  
+    public String toString() {  
+        return name + " (" + age + "歳, " + height + "cm)";  
+    }  
+}
+```
+#### 方式二：使用sort方法，创建Comparator比较器接口的匿名内部类对象，然后自己指定比较规则
+使用代码如下：
+```java
+Arrays.sort(students, new Comparator<Student>() {  
+    @Override  
+    public int compare(Student o1, Student o2) {  
+        //比較規則を設定する  
+        if(o1.getHeight() > o2.getHeight()) {  
+            return 1;  
+        }else if(o1.getHeight() < o2.getHeight()) {  
+            return -1;  
+        }  
+        return 0;  
+    }  
+});  
+System.out.println(Arrays.toString(students));
+```
+# 三、JDK8新特性
+## 1）Lambda表达式
+- Lambda表达式是JDK8开始新增的一种语法形式。
+   <div style="color:#F00;font-weight: bold;"> 作用：用于简化匿名内部类的代码写法。</div>
+代码示例：
+```java
+public class LambdaTest1 {
+    public static void main(String[] args) {
+//        Animal a = new Animal() {
+//            @Override
+//            public void run() {
+//                System.out.println("犬は速く走った~~");
+//            }
+//        };
+//        a.run();
+
+//        Swimming s = new Swimming() {
+//            @Override
+//                public void swim() {
+//                System.out.println("学生は楽しく泳いでいる");
+//            }
+//        };
+//        s.swim();
+
+        //これはLambda式だ
+        Swimming s2 = () -> {
+            System.out.println("学生は楽しく泳いでいるのだ");
+        };
+        s2.swim();
+    }
+}
+
+abstract class Animal {
+    public abstract void run();
+}
+
+interface Swimming {
+    void swim();
+}
+```
