--- a/java笔记/3.Java笔记_语句_数组.md
+++ b/java笔记/3.Java笔记_语句_数组.md
@@ -1,4 +1,4 @@
-[接day2笔记 >](./Java笔记day2.md)
+[接Java笔记_运算符_Scanner >](2.Java笔记_运算符_Scanner.md)
 # 一、语句
 ## 1）分支结构
 ### 1. 单个if语句
@@ -156,7 +156,7 @@ public class RandomDemo {
   所以有以下规律：
   要输出 N - M 的随机数，则：
    `r.nextInt(M-N+1) + N`
-# 四、数组
+# 二、数组
 ## 1）数组是什么？
 是一个容器，可以存放**同类型的数据**。
 代码示例：
