--- a/java笔记/5.Java笔记_对象初级.md
+++ b/java笔记/5.Java笔记_对象初级.md
@@ -1,4 +1,4 @@
-[接Java笔记day4 >](./Java笔记day4)
+[接Java笔记_方法 >](4.Java笔记_方法.md)
 # 一、对象
 ## 1）创建对象并使用
 在之前的学习中，我是在一个项目里创建并使用对象。但是在黑马的课程里，还有另外一个创建并使用对象的例子，如下：
