--- a/java笔记/7.Java笔记_static_继承类.md
+++ b/java笔记/7.Java笔记_static_继承类.md
@@ -1,4 +1,4 @@
-接[Java笔记day6 >](./Java笔记day6.md)
+[接Java笔记_StringAPI_ArrayList >](6.Java笔记_StringAPI_ArrayList.md)
 
 # 一、static与类
 ## 1）static修饰成员变量
