--- a/java笔记/8.Java笔记_多态_抽象类_接口.md
+++ b/java笔记/8.Java笔记_多态_抽象类_接口.md
@@ -1,4 +1,4 @@
-[接Java笔记day7 >](./Java笔记day7.md)
+[接Java笔记_static_继承类 >](7.Java笔记_static_继承类.md)
 # 一、面向对象：多态
 ## 1）什么是多态
 - 多态是**继承/实现**情况下的一种现象，表现为：对象多态、行为多态。
