--- a/java笔记/10.Java笔记_jdk8新时间_arrays.md
+++ b/java笔记/10.Java笔记_jdk8新时间_arrays.md
@@ -427,8 +427,7 @@ System.out.println(Arrays.toString(students));
 ```
 # 三、JDK8新特性
 ## 1）Lambda表达式
-- Lambda表达式是JDK8开始新增的一种语法形式。
-   <div style="color:#F00;font-weight: bold;"> 作用：用于简化匿名内部类的代码写法。</div>
+- Lambda表达式是JDK8开始新增的一种语法形式。**作用：用于简化匿名内部类的代码写法。**
 代码示例：
 ```java
 public class LambdaTest1 {
@@ -463,5 +462,62 @@ abstract class Animal {
 
 interface Swimming {
     void swim();
+}
+```
+## 2）方法引用
+### 1. 静态方法引用
+代码示例：
+```java
+public class CompareByData {
+    public static int compareByAge(Student o1, Student o2) {
+        return o1.getAge() - o2.getAge();
+    }
+}
+--------------------------------------------------        分割线       -----------------------------------------------------
+import java.util.Arrays;  
+public class Test {  
+    public static void main(String[] args) {  
+        Student[] students = new Student[4];  
+        students[0] = new Student("佐藤さん", 175.5, 22);  
+        students[1] = new Student("諏訪さん",  154, 19);  
+        students[2] = new Student("後藤さん", 155, 16);  
+        students[3] = new Student("上原さん", 162, 17);  
+  
+        //方法引用の例  
+        Arrays.sort(students, CompareByData::compareByAge);  
+  
+        System.out.println(Arrays.toString(students));  
+    }  
+}
+```
+### 3. 特定类型方法引用
+代码示例：
+```java
+import java.util.Arrays;  
+import java.util.Comparator;  
+  
+public class Test2 {  
+    public static void main(String[] args) {  
+        String[] names = {"Boby", "Anger", "ann", "caocao", "uehara", "anon"};  
+  
+        //並び替えにする(ディフォルトの設定は頭文字番号(ASCll)に従って並び替えることだ)  
+        Arrays.sort(names);  
+  
+        //頭文字の大きさを見せずに並び替える  
+//        Arrays.sort(names, new Comparator<String>() {  
+//            @Override  
+//            public int compare(String o1, String o2) {  
+//                //比較規則を作成する。o1 = "ann"  o2 =  "anon"  
+//                return o1.compareToIgnoreCase(o2);  
+//            }  
+//        });  
+  
+        //特定類の方法引用  
+        Arrays.sort(names, (String o1, String o2) -> {  
+            return o1.compareToIgnoreCase(o2);  
+        });  
+  
+        System.out.println(Arrays.toString(names));  
+    }  
 }
 ```
