--- a/MySQL/2.MySQL概述-SQL-约束-数据库设计.md
+++ b/MySQL/2.MySQL概述-SQL-约束-数据库设计.md
@@ -6,7 +6,7 @@
 2. 使用SQL语言操作，标准统一，使用方便
 ## 2）MySQL数据库
 如图所示：
-![Pasted image 20250708133502.png](数据模型拓扑图.png)
+![数据模型拓扑图.png](数据模型拓扑图.png)
 # 二、图形化界面工具
 ## 1）DataGrip配置MySQL
 用户填root，密码填默认密码。
@@ -27,7 +27,7 @@
 	- 多行：/\*注释内容\*/
 ## 2）SQL分类
 分类如下：
-![SQL分类.png](SQL分类.png)
+![SQL分类.png](./图片/SQL分类.png)
 ## 3）DDL
 ### （1）DDL-数据库操作
 - 查询
@@ -52,7 +52,7 @@
 - 查询指定表的建表语句
 	`show create table 表名;`
 ### （3）DDL-表操作-创建
-![DDL-表操作-创建表.png](DDL-表操作-创建表.png)
+![DDL-表操作-创建表.png](./图片/DDL-表操作-创建表.png)
 ### （4）DDL-表操作-数据类型
 MySQL中的数据类型很多，主要分为三类：数值类型、字符串类型、日期时间类型。
 数值类型：
@@ -67,6 +67,7 @@ MySQL中的数据类型很多，主要分为三类：数值类型、字符串类
 |    FLOAT    | 4 bytes |  单精度浮点数值   |
 |   DOUBLE    | 8 bytes |  双精度浮点数值   |
 |   DECIMAL   |         | 小数值（精确定点数） |
+
 字符串类型：
 ![字符串类型 .png](./图片/字符串类型.png)
 日期类型：
@@ -500,3 +501,6 @@ alter table emp add constraint fk_emp_dept foreign key(dep_id) references dept(i
 ```shell
 [23000][1451] Cannot delete or update a parent row: a foreign key constraint fails (`外键约束`.`emp`, CONSTRAINT `fk_emp_dept` FOREIGN KEY (`dep_id`) REFERENCES `dept` (`id`))
 ```
+# 五、数据库设计
+## 1）软件的研发步骤
+![数据库设计-软件的研发步骤.png](数据库设计-软件的研发步骤.png)
