--- a/Java Web笔记/2.MySQL概述-SQL-约束-数据库设计.md
+++ b/Java Web笔记/2.MySQL概述-SQL-约束-数据库设计.md
@@ -6,17 +6,17 @@
 2. 使用SQL语言操作，标准统一，使用方便
 ## 2）MySQL数据库
 如图所示：
-![数据模型拓扑图.png](./图片/数据模型拓扑图.png)
+![数据模型拓扑图.png](数据模型拓扑图.png)
 # 二、图形化界面工具
 ## 1）DataGrip配置MySQL
 用户填root，密码填默认密码。
 **重要：高级中，要填`allowPublicKeyRetrieval`**
 ## 2）DG创建表格
 如图所示：
-![新建表格.png](./图片/新建表格.png)
+![新建表格.png](新建表格.png)
 
 可以写完指令后点击运行：
-![运行指令.png](./图片/运行指令.png)
+![运行指令.png](运行指令.png)
 # 三、SQL
 ## 1）SQL的通用语法
 1. SQL语句可以单行或多行书写，以分号结尾。
@@ -27,7 +27,7 @@
 	- 多行：/\*注释内容\*/
 ## 2）SQL分类
 分类如下：
-![SQL分类.png](./图片/SQL分类.png)
+![SQL分类.png](SQL分类.png)
 ## 3）DDL
 ### （1）DDL-数据库操作
 - 查询
@@ -52,7 +52,7 @@
 - 查询指定表的建表语句
 	`show create table 表名;`
 ### （3）DDL-表操作-创建
-![DDL-表操作-创建表.png](./图片/DDL-表操作-创建表.png)
+![DDL-表操作-创建表.png](DDL-表操作-创建表.png)
 ### （4）DDL-表操作-数据类型
 MySQL中的数据类型很多，主要分为三类：数值类型、字符串类型、日期时间类型。
 数值类型：
@@ -69,9 +69,9 @@ MySQL中的数据类型很多，主要分为三类：数值类型、字符串类
 |   DECIMAL   |         | 小数值（精确定点数） |
 
 字符串类型：
-![字符串类型 .png](./图片/字符串类型.png)
+![字符串类型 .png](字符串类型.png)
 日期类型：
-![日期类型.png](./图片/日期类型.png)
+![日期类型.png](日期类型.png)
 案例：
 ```sql
 create table officers(
@@ -187,7 +187,7 @@ delete from employee where id = 1;
 ### （1）DQL - 介绍
 DQL英文全称是Data Query Language（数据查询语言），数据查询语言，用来查询数据库中表的记录。
 ### （2）DQL - 语法
- ![DQL语法.png](./图片/DQL语法.png)
+ ![DQL语法.png](DQL语法.png)
 ### （3）DQL - 基本查询
 1. 查询多个字段
 `SELECT 字段1,字段2,字段3,... FROM 表名;`
@@ -233,8 +233,8 @@ select distinct workaddress '工作地址' from employee;
 1. 语法
 `SELECT 字段列表 FROM 表名 WHERE 条件列表;`
 2. 条件
-![逻辑运算符1.png](./图片/逻辑运算符1.png)
-  ![逻辑运算符2.png](./图片/逻辑运算符2.png)
+![逻辑运算符1.png](逻辑运算符1.png)
+  ![逻辑运算符2.png](逻辑运算符2.png)
 代码：
 ```sql
 --条件查询  
@@ -384,7 +384,7 @@ select name, age from employee where age <= 35 order by age asc, entrydate desc 
 select * from employee where gender = 'm' and ( age between 20 and 40 ) order by age asc, entrydate asc limit 5;
 ```
 ### （10）DQL - 执行顺序
-![DQL-执行顺序.png](./图片/DQL-执行顺序.png)
+![DQL-执行顺序.png](DQL-执行顺序.png)
 
 ## 6）DCL
 ### （1）DCL-介绍
@@ -408,11 +408,11 @@ SELECT * FROM user;
 - 约束是作用于表中列上的规则，用于限制加入表的数据。
 - 约束的存在保证了数据库中数据的正确性、有效性和完整性。
 2. 约束的分类
-![约束的分类.png](./图片/约束的分类.png)
+![约束的分类.png](约束的分类.png)
 **注意:MySQL不支持检查约束**
 ## 2）案例示例
 要求：根据需求，为表添加合适的约束
-![约束-案例.png](./图片/约束-案例.png)
+![约束-案例.png](约束-案例.png)
 代码：
 ```sql
 create table emp  
@@ -489,9 +489,9 @@ ALTER TABLE 表名 DROP FOREIGN KEY 外键名称;
 ```
 ### （3） 例子
 emp员工表如下：
-![外键约束-emp员工表.png](./图片/外键约束-emp员工表.png)
+![外键约束-emp员工表.png](外键约束-emp员工表.png)
 dept部门表如下：
-![外键约束-dept部门表](./图片/外键约束-dept部门表.png)
+![外键约束-dept部门表](外键约束-dept部门表.png)
 需求：使得dep_id=1的员工全部删除后，才能删除研发部。
 代码：
 ```sql
@@ -503,4 +503,37 @@ alter table emp add constraint fk_emp_dept foreign key(dep_id) references dept(i
 ```
 # 五、数据库设计
 ## 1）软件的研发步骤
-![数据库设计-软件的研发步骤.png](./图片/数据库设计-软件的研发步骤.png)
+![数据库设计-软件的研发步骤.png](数据库设计-软件的研发步骤.png)
+## 2）数据库设计概念
+- 数据库设计就是跟据业务系统的具体要求，结合我们所选用的DBMS，为这个业务系统构造出最优的数据存储模型。
+- 建立数据库中的**表结构**以及**表与表之间的关联关系**的过程。
+- 有哪些表？表里有哪些字段？表和表之间有什么关系？
+## 3）数据库设计的步骤
+1. 需求分析
+2. 逻辑分析
+3. 物理设计
+4. 维护设计
+## 4）表关系
+- 一对一:
+	- 如：用户 和 用户详情
+	- 一对一关系多用于表拆分，将一个实体中经常使用的字段放一张表，不经常使用的字段放另一张表，用于提升查询性能。
+- 一对多（多对一）：
+	- 如：部门与员工
+	- 一个部门对应多个员工，一个员工对应一个部门
+- 多对多：
+	- 如：商品 和 订单
+	- 一个商品对应多个订单，一个订单包含多个商品
+1. 一对多
+实现方式：在多的一方建立外键，指向一的一方的主键
+2. 多对多
+实现方式：建立第三张中间表，中间表至少包含两个外键，分别关联两方主键。
+如图所示：
+![数据库设计-多对多.png](数据库设计-多对多.png)
+3. 一对一
+实现方式：在任意一方加入外键，关联另一方主键，并且设置外键为唯一（UNIQUE）
+示例：
+![数据库设计-一对一.png](数据库设计-一对一.png)
+## 5）案例
+需求：设计专辑评论页面的数据库。
+数据库关系如图所示：
+![数据库设计-案例示意图.png](数据库设计-案例示意图.png)
