--- a/Java Web笔记/3.MySQL-多表查询-事务-JDBC.md
+++ b/Java Web笔记/3.MySQL-多表查询-事务-JDBC.md
@@ -83,4 +83,65 @@ select * from emp, dept where age > (select age from emp where name = '赵六') 
 -- 查询‘销售部’所有的员工信息  
 select * from emp where dep_id in (select dept.id from dept where dep_name = '销售部' or dep_name = '研发部');  
 select * from emp where dep_id = (select dept.id from dept where dep_name = '销售部');
+
+-- 查询入职日期是‘2011-11-11’之后的员工信息和部门信息  
+-- 查询入职日期是‘2011-11-11’之后的员工信息
+select * from emp where entrydate > '2011-11-11';
+
+-- 合成  
+select * from (select * from emp where entrydate > '2011-11-11') t1,dept where t1.dep_id = dept.id;
 ```
+# 二、事务
+- 数据库的事务是一种机制、一个操作序列，包含了一组数据库操作命令
+- 事务把所有的命令作为一个整体一起向系统提交或撤销操作请求，即这一组数据库命令要么同时成功，要么同时失败
+- 事务是一个不可分割的工作逻辑单元
+具体示例如图所示:
+![事务-简介.png](./图片/事务-简介.png)
+语法：
+```sql
+-- 开启事务
+START TRANSACTION;
+或者 BEGIN;
+-- 提交事务
+COMMIT;
+--回滚事务
+ROLLBACK;
+```
+代码示例:
+```sql
+-- 创建列表  
+create table account (  
+    id int primary key auto_increment,  
+    name varchar(10),  
+    money double(10,2)  
+);  
+  
+-- 添加数据  
+insert into account(name, money) values ('张三', 1000), ('李四', 1000);  
+  
+select * from account;  
+update account set money = 1000;  
+  
+-- 转账操作  
+begin;  
+-- 1.查询李四的余额  
+select money from account where name = '李四';  
+-- 2.李四金额 -500
+update account set money = money - 500 where name = '李四';  
+-- 3.张三金额 +500
+update account set money = money + 500 where name = '张三';  
+-- 4.提交事务  
+commit;  
+-- 5.若不正确可以回滚事务  
+rollback;
+```
+# 三、JDBC
+## 1）简介
+JDBC概念：
+- JDBC就是使用java语言操作关系型数据库的一套API
+- 全称：（Java DataBase Connectivity）Java数据库连接
+JDBC本质：
+- 官方定义的一套操作所有关系型数据库的规则，即接口
+- 各个数据库厂商去实现这套接口，提供数据库驱动jar包
+- 我们可以使用这套接口（JDBC）编程，真正执行的代码是驱动jar包中的实现类。
+![JDBC简介.png](./图片/JDBC简介.png)
