--- a/Java Web笔记/3.MySQL-多表查询-事务-JDBC.md
+++ b/Java Web笔记/3.MySQL-多表查询-事务-JDBC.md
@@ -144,4 +144,32 @@ JDBC本质：
 - 官方定义的一套操作所有关系型数据库的规则，即接口
 - 各个数据库厂商去实现这套接口，提供数据库驱动jar包
 - 我们可以使用这套接口（JDBC）编程，真正执行的代码是驱动jar包中的实现类。
+JDBC好处：
+- 各数据库厂商使用相同的接口，Java代码不需要针对不同数据库分别开发
+- 可随时替换底层数据库，访问数据库的Java代码基本不变
 ![JDBC简介.png](./图片/JDBC简介.png)
+## 2）JDBC快速入门
+步骤：
+0.创建工程，导入驱动jar包
+1.注册驱动
+```sql
+Class.forName("com.mysql.jdbc.Driver");
+```
+2.获取连接
+```sql
+Connection conn = DriverManager.getConnection(url, username, password);
+```
+3.定义SQL语句
+```sql
+String sql = "update...";
+```
+4.获取执行SQL对象
+```sql
+Statement stmt = conn.createStatement();
+```
+5.执行SQL
+```sql
+stmt.executeUpdate(sql);
+```
+6.处理返回结果
+7.释放资源
