--- a/Java Web笔记/2.MySQL概述-SQL-约束-数据库设计.md
+++ b/Java Web笔记/2.MySQL概述-SQL-约束-数据库设计.md
@@ -10,7 +10,7 @@
 # 二、图形化界面工具
 ## 1）DataGrip配置MySQL
 用户填root，密码填默认密码。
-**重要：高级中，要填`allowPublicKeyRetrieval`**
+**重要：高级中，要填`allowPublicKeyRetrieval`，值为true。**
 ## 2）DG创建表格
 如图所示：
 ![新建表格.png](./图片/新建表格.png)
