--- a/Java Web笔记/6.Java Web-Mybatis.md
+++ b/Java Web笔记/6.Java Web-Mybatis.md
@@ -196,3 +196,245 @@ public class User {
     private String phoneNumber;
 ```
 # 二、Mybatis基础操作
+## 1）Demo示例
+需求说明
+根据资料中提供的《tlias智能学习辅助系统》页面原型及需求，完成员工管理的需求开发。
+### 功能列表
+查询
+- 根据主键ID查询
+- 条件查询
+新增
+更新
+删除
+- 根据主键ID删除
+- 根据主键ID批量删除
+## 2）准备工作
+- 准备数据库表emp
+- 创建一个新的springboot工程，选择引入对应的起步依赖（mybatis、mysql驱动、lombok）
+- application.properties中引入数据库连接信息
+- 创建对应的实体类Emp（实体类属性采用驼峰命名）
+- 准备Mapper接口 EmpMapper
+代码略。
+## 3）删除操作
+### （1）根据主键删除
+根据传进来的id动态删除数据
+Mybatis动态传值语法为：`#{变量名}`
+代码示例：
+Mapper部分：
+```java
+//根据id删除数据  
+@Delete("delete from emp where id = #{id}")  
+public void delete(int id);
+```
+测试类：
+```java
+package com.itheima.mybatisdemo;  
+  
+import com.itheima.mybatisdemo.mapper.EmpMapper;  
+import com.itheima.mybatisdemo.project.Emp;  
+import org.junit.jupiter.api.Test;  
+import org.springframework.beans.factory.annotation.Autowired;  
+import org.springframework.boot.test.context.SpringBootTest;  
+import java.util.List;  
+  
+@SpringBootTest  
+class MybatisDemoApplicationTests {  
+    @Autowired  
+    private EmpMapper EmpMapper;  
+  
+    public void testDelete(){  
+        EmpMapper.delete(17);  
+    }  
+}
+```
+这样就可以根据id删除用户信息了。
+稍微修改一下，就可以看影响的行数。
+Mapper部分：
+```java
+//根据id删除数据  
+@Delete("delete from emp where id = #{id}")  
+public int delete(int id);
+```
+测试类：
+```java
+@SpringBootTest  
+class MybatisDemoApplicationTests {  
+    @Autowired  
+    private EmpMapper EmpMapper;  
+  
+    @Test  
+    //删除类  
+    public void testDelete(){  
+        int delete = EmpMapper.delete(16);  
+        System.out.println(delete);  
+    }  
+}
+```
+一般选择前者不返回数据的方案。
+sql执行日志输出：
+- 可以再application.properties中，打开mybatis的日志，并指定输出到控制台。
+```yml
+#指定mybatis输出日志的位置，输出控制台
+mybatis.configuration.log-impl = org.apache.ibatis.logging.stdout.StdOutImpl
+```
+输出以下日志：
+```shell
+==>  Preparing: delete from emp where id = ?
+==> Parameters: 16(Integer)
+<==    Updates: 1
+```
+### （2）删除（预编译SQL）
+预编译SQL的优势：
+- 性能更高
+- 更安全（防止SQL注入）
+SQL注入
+- **SQL注入**是通过操作输入的数据来修改事先定义好的SQL语句，以达到执行代码对服务器进行攻击的方法。
+示例：在如图所示的后台管理系统中，如图输入：
+![mybatis-删除操作-sql预编译](mybatis-删除操作-sql预编译.png)
+将此输入内容键入以下sql语句：
+```sql
+-- 登录  
+select count(*) from emp where username = 'zhangwuji' and password = ' ' or '1' = '1';
+```
+结果肯定返回1，从而登录成功。
+为了解决这个问题，我们要预编译sql，上述`#{}`的结构，就是预编译sql。
+## 4）新建操作
+### （1）介绍
+对于EmpMapper的操作示例：
+```java
+package com.itheima.mybatisdemo.mapper;  
+  
+import com.itheima.mybatisdemo.project.Emp;  
+import org.apache.ibatis.annotations.Delete;  
+import org.apache.ibatis.annotations.Insert;  
+import org.apache.ibatis.annotations.Mapper;  
+import org.apache.ibatis.annotations.Select;  
+  
+import java.util.List;  
+  
+@Mapper  
+public interface EmpMapper {  
+    //根据id动态删除数据  
+//    @Delete("delete from emp where id = #{id}")  
+//    public void delete(int id);  
+  
+    //新增员工  
+    @Insert("insert into emp(id, username, name, gender, image, job, entrydate, dept_id, create_time, update_time)" +  
+                "values (#{id},#{username},#{name},#{gender},#{image},#{job},#{entrydate},#{deptId},#{createTime},#{updateTime})")  
+    public void insert(Emp emp);  
+}
+```
+新知识点：因为数据太多，所以可以直接使用Emp对象来传递各项员工数据。同样使用`#{}`来进行编译。
+测试类方法：
+```java
+//添加类  
+public void testIncert(){  
+    Emp emp = new Emp();  
+    emp.setId(16);  
+    emp.setUsername("Tom");  
+    emp.setName("汤姆");  
+    emp.setImage("1.jpg");  
+    emp.setGender((short)1);  
+    emp.setJob((short)1);  
+    emp.setEntrydate(LocalDate.of(2025,07,15));  
+    emp.setCreateTime(LocalDateTime.now());  
+    emp.setUpdateTime(LocalDateTime.now());  
+    emp.setDeptId(1);  
+  
+    //执行新增员工信息操作  
+    EmpMapper.insert(emp);  
+}
+```
+通过就地构造一个类，我们可以直观地创建员工的数据。
+### （2）主键返回
+- 描述：在数据添加成功后，需要获取插入数据库数据的主键。如：添加套餐数据是，还需要维护套餐菜品关系表数据。
+测试类代码：
+```java
+public void testIncert(){  
+    Emp emp = new Emp();  
+    emp.setUsername("Tom3");  
+    emp.setName("汤姆");  
+    emp.setImage("1.jpg");  
+    emp.setGender((short)1);  
+    emp.setJob((short)1);  
+    emp.setEntrydate(LocalDate.of(2025,07,15));  
+    emp.setCreateTime(LocalDateTime.now());  
+    emp.setUpdateTime(LocalDateTime.now());  
+    emp.setDeptId(1);
+
+	//执行新增员工信息操作  
+	EmpMapper.insert(emp);  
+	System.out.println(emp.getId());
+}
+```
+getId值为0，因为我们并没有设置emp类中id的具体值。
+解决方法：
+在EmpMapper中，加入：
+```java
+@Options(useGeneratedKeys = true, keyProperty = "id")
+@Insert("insert into emp(username, name, gender, image, job, entrydate, dept_id, create_time, update_time)" +  
+            "values (#{username},#{name},#{gender},#{image},#{job},#{entrydate},#{deptId},#{createTime},#{updateTime})")  
+public void insert(Emp emp);
+```
+即可返回id值。
+## 5）更新操作
+### （1）介绍
+在新建操作的基础上进行修改：
+ EmpMapper接口：
+ ```java
+ //更新操作  
+@Update("update emp set username = #{username}, name = #{name}, gender = #{gender}, image = #{image}, job = #{job}, entrydate = #{entrydate}, dept_id = #{deptId}, update_time = #{updateTime} where id = #{id}")  
+public int update(Emp emp);
+```
+测试类：
+```java
+//添加类  
+public void testIncert(){  
+    Emp emp = new Emp();  
+    emp.setId(1);  
+    emp.setUsername("Tommao");  
+    emp.setName("汤姆dada");  
+    emp.setImage("1.jpg");  
+    emp.setGender((short)1);  
+    emp.setJob((short)1);  
+    emp.setEntrydate(LocalDate.of(2025,07,15));  
+    emp.setUpdateTime(LocalDateTime.now());  
+    emp.setDeptId(1);  
+  
+    //执行新增员工信息操作  
+    EmpMapper.update(emp);  
+    System.out.println(emp.getId());  
+}
+```
+## 6）查询操作
+### （1）介绍
+根据ID查询员工：
+EmpMapper如下：
+```java
+//查询操作  
+@Select("select * from emp where id = #{id}")  
+public Emp getById(int id);
+```
+测试类如下：
+```java
+//查询操作
+public void testGetById() {  
+    Emp emp = EmpMapper.getById(10);  
+    System.out.println(emp);  
+}
+```
+但是结果如下：
+```shell
+Emp(id=10, username=zhaomin, password=123456, name=赵敏, gender=2, image=10.jpg, job=1, entrydate=2013-09-05, deptId=0, createTime=null, updateTime=null)
+```
+createTime和updateTime为null。这是为什么呢？
+#### 数据封装
+- 实体类属性名 和 数据库表查询返回的字段名一致，mybatis会自动封装。
+- 如果实体类属性名 和 数据库表查询返回的字段名不一致，不能自动封装。
+其中deptId、createTime和updateTime与数据库中的字段名并不一致，所以不能自动封装。
+
+#### 解决方案
+方案一示例：
+```java
+
+```
