--- a/Java Web笔记/6.Java Web-Mybatis.md
+++ b/Java Web笔记/6.Java Web-Mybatis.md
@@ -407,7 +407,7 @@ public void testIncert(){
 }
 ```
 ## 6）查询操作
-### （1）介绍
+### （1）根据ID查询
 根据ID查询员工：
 EmpMapper如下：
 ```java
@@ -432,9 +432,52 @@ createTime和updateTime为null。这是为什么呢？
 - 实体类属性名 和 数据库表查询返回的字段名一致，mybatis会自动封装。
 - 如果实体类属性名 和 数据库表查询返回的字段名不一致，不能自动封装。
 其中deptId、createTime和updateTime与数据库中的字段名并不一致，所以不能自动封装。
-
 #### 解决方案
-方案一示例：
+- 方案一示例：
 ```java
-
+//方案一：给字段起别名，让别名与实体类属性一致  
+@Select("select id, username, password, name, gender, image, job, entrydate, dept_id" +  
+        "create_time createTime, update_time updateTime from emp where id = #{id}")  
+public Emp getById(int id);
+```
+- 方案二示例：
+```java
+//方案二：通过@Results，@Result注解手动映射封装  
+@Select("select * from emp where id = #{id}")  
+@Results({  
+        @Result(column = "dept_id", property = "deptId"),  
+        @Result(column = "update_time", property = "updateTime"),  
+        @Result(column = "create_time", property = "createTime")  
+})  
+public Emp getById(Integer id);
+```
+- 方案三：开启mybatis的驼峰命名自动映射开关
+```yaml
+#开启mybatis的驼峰命名自动映射开关  
+mybatis.configuration.map-underscore-to-camel-case = true
+```
+### （2）条件查询
+EmpMapper如下：
+```java
+//条件查询  
+@Select("select * from emp where name like '%${name}%' and gender = #{gender} " +  
+             "and entrydate between #{begin} and #{end} order by update_time desc")  
+public List<Emp> list(String name, short gender, LocalDate begin, LocalDate end);
+```
+Test类如下：
+```java
+//条件查询  
+public void testGet() {  
+    List<Emp> empList = EmpMapper.list("张", (short)1, LocalDate.of(2000,1,1),LocalDate.of(2020,1,1));  
+    empList.forEach(System.out::println);  
+}
+```
+问题：EmpMapper中，`%${name}%`不是预编译sql语句，会出现性能低、不安全、存在sql注入问题。
+解决方案：用`concat()`来拼接字符串。
+修改如下：
+```java
+//条件查询  
+@Select("select * from emp where name like concat and gender = #{gender} " +  
+             "and entrydate between #{begin} and #{end} order by update_time desc")  
+public List<Emp> list(String name, short gender, LocalDate begin, LocalDate end);
 ```
