--- a/Java Web笔记/7.Java Web-Spring Boot理论篇.md
+++ b/Java Web笔记/7.Java Web-Spring Boot理论篇.md
@@ -105,9 +105,9 @@ server.servlet.context-path=/start
 语法示例：
 ```yml
 server:
-	port:9191
-	servlet:
-		context-path: /start2
+ port:9191
+ servlet:
+  context-path: /start2
 ```
 显然第二种更加简洁好用，故在实际开发中，优先用yml配置文件。
 ### （3）yml配置信息书写与读取
@@ -138,10 +138,10 @@ email.auth = true
 或者
 ```yml
 email:
-	user: xxxxx
-	code: xxxx
-	host: xxxxx
-	auth: true
+ user: xxxxx
+ code: xxxx
+ host: xxxxx
+ auth: true
 ```
 **注意点：**
 - 值前面必须有空格，作为分隔符
@@ -193,3 +193,171 @@ public interface EmpMapper {
     public Emp getById(Integer id);  
 }
 ```
+Emp对象：
+```java
+package com.itheima.springbootmybatis.pojo;  
+  
+import lombok.AllArgsConstructor;  
+import lombok.Data;  
+import lombok.NoArgsConstructor;  
+  
+import java.time.LocalDate;  
+import java.time.LocalDateTime;  
+  
+@Data  
+@AllArgsConstructor  
+@NoArgsConstructor  
+public class Emp {  
+    private int id;  
+    private String username;  
+    private String password;  
+    private String name;  
+    private short gender;  
+    private String image;  
+    private short job;  
+    private LocalDate entrydate;  
+    private int deptId;  
+    private LocalDateTime createTime;  
+    private LocalDateTime updateTime;  
+}
+```
+package.service.impl.EmpServiceImpl：
+```java
+package com.itheima.springbootmybatis.service.impl;  
+  
+import com.itheima.springbootmybatis.mapper.EmpMapper;  
+import com.itheima.springbootmybatis.pojo.Emp;  
+import com.itheima.springbootmybatis.service.EmpService;  
+import org.springframework.beans.factory.annotation.Autowired;  
+import org.springframework.stereotype.Service;  
+  
+@Service  
+public class EmpServiceImpl implements EmpService {  
+    @Autowired  
+    private EmpMapper empMapper;  
+  
+    public Emp getById(Integer id) {  
+        return empMapper.getById(id);  
+    }  
+}
+```
+package.service.Empservice：
+```java
+package com.itheima.springbootmybatis.service;  
+  
+import com.itheima.springbootmybatis.pojo.Emp;  
+  
+public interface EmpService {  
+    public Emp getById(Integer id);  
+}
+```
+application.yml:
+```yml
+spring:  
+  datasource:  
+    driver-class-name: com.mysql.cj.jdbc.Driver  
+    url: jdbc:mysql://localhost:3306/mybatis  
+    username: root  
+    password: 123456
+```
+## 5）Bean管理
+### （1）Bean对象扫描
+- 标签：`<context:component-scan base-package="com.itheima"/>`
+- 注解：`@ComponentScan(basePackages = "com.itheima")`
+### （2）Bean注册
+![](./图片/Bean管理-Bean注册.png)
+如果要注册的bean对象来自于第三方（不是自定义的），是无法用@Component及衍生注解声明bean的。
+需要自己导入jar包进去，才可以声明。
+### （3）注册条件
+Springboot提供了设置注册生效条件的注解@Conditional
+
+| 注解                        | 说明                      |
+| ------------------------- | ----------------------- |
+| @ConditionalOnProperty    | 配置文件中存在对应的属性，才声明该bean   |
+| @ConditionalOnMissingBean | 当不存在当前类型的bean时，才声明该bean |
+| @ConditionalClass         | 当前环境存在指定的这个类时，才声明该bean  |
+## 6）自动配置原理
+遵循约定大约配置的原则，在boot程序启动后，起步依赖中的一些bean对象会自动注入到ioc容器
+代码示例：
+ 启动类：
+```java
+package com.itheima.springbootautoconfig;  
+  
+import org.springframework.boot.SpringApplication;  
+import org.springframework.boot.autoconfigure.SpringBootApplication;  
+import org.springframework.context.ApplicationContext;  
+  
+@SpringBootApplication  
+public class SpringbootAutoConfigApplication {  
+  
+    public static void main(String[] args) {  
+        ApplicationContext context = SpringApplication.run(SpringbootAutoConfigApplication.class, args);  
+        System.out.println(context.getBean("dispatcherServlet"));  
+    }  
+}
+```
+pom.xml：
+```java
+<dependency>  
+    <groupId>org.springframework.boot</groupId>  
+    <artifactId>spring-boot-starter-web</artifactId>  
+</dependency>
+```
+JVM:
+```shell
+org.springframework.web.servlet.DispatcherServlet@b606cb6
+```
+## 7）自定义starter
+场景：
+- 在实际开发中，经常会定义一些公共组件，提供给各个项目团队使用。而在SpringBoot的项目中，一般会将这些公共组件封装为SpringBoot的Starter。
+代码示例：
+自动配置类
+```java
+package com.itheima.config;  
+  
+import org.apache.ibatis.annotations.Mapper;  
+import org.mybatis.spring.SqlSessionFactoryBean;  
+import org.mybatis.spring.mapper.MapperScannerConfigurer;  
+import org.springframework.beans.factory.BeanFactory;  
+import org.springframework.boot.autoconfigure.AutoConfiguration;  
+import org.springframework.boot.autoconfigure.AutoConfigurationPackages;  
+import org.springframework.context.annotation.Bean;  
+  
+import javax.sql.DataSource;  
+import java.util.List;  
+  
+@AutoConfiguration   //表示当前类是一个自动配置类  
+public class MyBatisAutoConfig {  
+  
+    //SqlSessionFactoryBean  
+    @Bean  
+    public SqlSessionFactoryBean sqlSessionFactoryBean(DataSource dataSource) {  
+        SqlSessionFactoryBean sqlSessionFactoryBean = new SqlSessionFactoryBean();  
+        sqlSessionFactoryBean.setDataSource(dataSource);  
+        return sqlSessionFactoryBean;  
+    }  
+  
+    //MapperScannerConfigure  
+    public MapperScannerConfigurer mapperScannerConfigurer(BeanFactory beanFactory) {  
+        MapperScannerConfigurer mapperScannerConfigurer = new MapperScannerConfigurer();  
+        //扫描的包：启动类所在的包及其子包  
+        List<String> packages = AutoConfigurationPackages.get(beanFactory);  
+        String p  = packages.get(0);  
+        mapperScannerConfigurer.setBasePackage(p);  
+  
+        //扫描的注解  
+        mapperScannerConfigurer.setAnnotationClass(Mapper.class);  
+        return mapperScannerConfigurer;  
+    }  
+}
+```
+在springboot-mybatis的pom.xml中，加入
+```java
+<!--        自定义的mybatis启动依赖        -->
+<dependency>  
+    <groupId>com.itheima</groupId>  
+    <artifactId>dmybatis-spring-boot-starter</artifactId>  
+    <version>1.0-SNAPSHOT</version>  
+</dependency>
+```
+发现可以正常读取数据库。
