上传笔记：大事件登录、注册功能

--- a/Java Web笔记/8.Java Web-Spring Boot实战篇-新闻系统：大事件（vue3+springboot）.md
+++ b/Java Web笔记/8.Java Web-Spring Boot实战篇-新闻系统：大事件（vue3+springboot）.md
@@ -114,13 +114,236 @@ public class BigEventApplication {
 自此，后端环境搭建完毕。
 # 三、用户相关功能
 ## 1）注册
+### （1）开发过程
 1. 明确需求
 2. 阅读接口文档
 3. 思路分析
 4. 开发
 5. 测试
 详情见[github的Demo](https://github.com/inabananami/)
+### （2）参数校验
+将UserController加入：
+```java
+if (username != null && username.length() >= 5 && username.length() <= 16 &&  
+        password != null && password.length() >= 5 && password.length() <= 16) {
+```
+输入用户名为w，密码为123456时，postman返回：
+```json
+{
+    "code": 1,
+    "message": "参数不合法",
+    "data": null
+}
+```
+为了简化代码，我们可以使用Spring Validation对注册接口的参数进行合法性校验。
+1. 引入Spring Validation起步依赖
+2. 在参数前面添加@Pattern注解
+3. 在Controller类上添加@Validated注解
+pom.xml添加：
+```xml
+<!--      Spring Validation    -->  
+      <dependency>  
+          <groupId>org.springframework.boot</groupId>  
+          <artifactId>spring-boot-starter-validation</artifactId>  
+      </dependency>
+```
 
+然后修改Controller类：
+```java
+public Result register(@Pattern(regexp = "^\\S{5,16}$") String username,@Pattern(regexp = "^\\S{5,16}$") String password)
+```
+
+最后处理参数校验失败的情况：
+```java
+package com.itheima.exception;  
+  
+import com.itheima.pojo.Result;  
+import org.springframework.util.StringUtils;  
+import org.springframework.web.bind.annotation.ExceptionHandler;  
+import org.springframework.web.bind.annotation.RestControllerAdvice;  
+  
+@RestControllerAdvice  
+public class GlobalExceptionHandler {  
+  
+    @ExceptionHandler(Exception.class)  
+    public Result handleException(Exception e) {  
+        e.printStackTrace();  
+        return Result.error(StringUtils.hasLength(e.getMessage())? e.getMessage(): "操作失败");  
+    }  
+}
+```
 ## 2）登录
+### （1）主逻辑
+UserController添加功能：
+```java
+@PostMapping("/login")  
+public Result<String> login(@Pattern(regexp = "^\\S{5,16}$") String username, @Pattern(regexp = "^\\S{5,16}$") String password) {  
+    //根据用户名查询User  
+    User loginUser = UserService.findByUserName(username);  
+    //判断是否查询到  
+    if(loginUser == null) {  
+        return Result.error("用户名错误");  
+    }else{  
+        //判断密码是否正确 loginUser对象中的password是密文  
+        if(Md5Util.getMD5String(password).equals(loginUser.getPassword())) {  
+            //登录成功  
+            return Result.success("jwt token令牌...");  
+        }  
+        return Result.error("密码错误！");  
+    }  
+}
+```
+测试成功。
+### （2）JWT
+**简介：**
+- 全称：JSON Web Token（https://jwt.io/）
+- 定义了一种简洁的、自包含的格式，用于通信双方以json数据格式安全的传输信息。
+- 组成：
+	- 第一部分：Header（头），记录令牌类型，签名算法等。例如：`{"alg": "HS256", "type": "JWT"}`
+	- 第二部分：Payload（有效载荷），携带一些自定义信息、默认信息等。例如：`{"id": "1", "username":"Tom"}
+	- 第三部分：Signatrue（签名），防止Token被篡改、确保安全性。将header、payload，并加入指定密钥，通过指定签名算法计算而来。
+先加依赖：
+```xml
+<!--      java-jwt坐标      -->  
+      <dependency>  
+          <groupId>com.auth0</groupId>  
+          <artifactId>java-jwt</artifactId>  
+          <version>4.4.0</version>  
+      </dependency>  
+  
+<!--      单元测试的坐标    -->  
+      <dependency>  
+          <groupId>org.springframework.boot</groupId>  
+          <artifactId>spring-boot-starter-test</artifactId>  
+      </dependency>
+```
+#### ア、JWT-生成
+测试类如下：
+```java
+package com.itheima;  
 
-## 3）获取用户详细信息
+import com.auth0.jwt.JWT;  
+import com.auth0.jwt.algorithms.Algorithm;  
+import org.junit.jupiter.api.Test;  
+import java.util.Date;  
+import java.util.HashMap;  
+import java.util.Map;  
+  
+public class JwtTest {  
+  
+    @Test  
+    public void testGen() {  
+        Map<String, Object> claims = new HashMap<>();  
+        claims.put("id", "1");  
+        claims.put("username", "张三");  
+        //生成jwt的代码  
+        String token = JWT.create()  
+                .withClaim("user", claims)   //添加载荷  
+                .withExpiresAt(new Date(System.currentTimeMillis()+1000*60*60*12))      //添加过期时间  
+                .sign(Algorithm.HMAC256("uehara_ayumu"));  
+  
+        System.out.println(token);  
+    }  
+}
+```
+#### イ、JWT-验证
+测试类如下：
+```java
+    @Test  
+    public void testParse() {  
+        //定义字符串，模拟用户传递过来的Token  
+        String token = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9" +  
+                                ".eyJ1c2VyIjp7ImlkIjoiMSIsInVzZXJuYW1lIjoi5byg5LiJIn0sImV4cCI6MTc1MzEyNjU1Nn0" +  
+                                ".-gvF0ZBLiXRi7YSQxeXJUFwwMZX-ESzjl_J8EYqmzww";  
+        JWTVerifier jwtVerifier = JWT.require(Algorithm.HMAC256("uehara_ayumu")).build();  
+  
+        DecodedJWT decodedJWT = jwtVerifier.verify(token);  //验证token，生成一个解析后的JWT对象  
+        Map<String, Claim> claims = decodedJWT.getClaims();  
+        System.out.println(claims.get("user"));  
+		//如果篡改了头部和载荷部分的数据，那么验证失败  
+		//如果密钥改了，验证失败
+    }  
+}
+```
+### （3）登录验证
+在现在的项目中，倘若我们已经构建了ArticleController：
+```java
+package com.itheima.controller;  
+  
+import com.itheima.pojo.Result;  
+import org.springframework.web.bind.annotation.GetMapping;  
+import org.springframework.web.bind.annotation.RequestMapping;  
+import org.springframework.web.bind.annotation.RestController;  
+  
+@RestController  
+@RequestMapping("/article")  
+public class ArticleController {  
+    @GetMapping("/list")  
+    public Result<String> list() {  
+        return Result.success("所有的文章数据...");  
+    }  
+}
+```
+那么当我们登录http://localhost:8080/article/list时，会发现：
+```json
+code: 0
+message: "操作成功"
+data: "所有的文章数据..."
+```
+没有登录，竟然把所有文章显示了出来。所以我们要添加登录验证功能，使得登录后才可以显示所有文章。
+**解决方案：** 需要我们登录时生成一个令牌，从而避免这个问题。
+经过（3）的JWT令牌认证后，我们通过postman进行测试时，输入正确的Token，就会：
+```json
+{
+    "code": 0,
+    "message": "操作成功",
+    "data": "所有的文章数据..."
+}
+```
+错误的情况下就会：
+```json
+{
+    "code": 1,
+    "message": "未登录",
+    "data": null
+}
+```
+我们也可以把认证的事情放在WebConfig类：
+```java
+package com.itheima.config;  
+  
+import com.itheima.interceptors.LoginInterceptor;  
+import org.springframework.beans.factory.annotation.Autowired;  
+import org.springframework.context.annotation.Configuration;  
+import org.springframework.web.servlet.config.annotation.InterceptorRegistry;  
+import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;  
+  
+@Configuration  
+public class WebConfig implements WebMvcConfigurer {  
+    @Autowired  
+    private LoginInterceptor loginInterceptor;  
+  
+    @Override  
+    public void addInterceptors(InterceptorRegistry registry) {  
+        //登录接口和注册接口不拦截  
+        registry.addInterceptor(loginInterceptor).excludePathPatterns("/user/login", "/user/register");  
+    }  
+}
+```
+## 4）获取用户详细信息
+### （1）主逻辑
+```java
+@GetMapping("/userInfo")  
+public Result<User> userInfo(@RequestHeader(name = "Authorization") String token) {  
+    //根据用户名查询用户  
+    Map<String, Object> map = JwtUtil.parseToken(token);  
+    String username = (String) map.get("username");  
+  
+    User user = UserService.findByUserName(username);  
+    return Result.success(user);  
+}
+```
+在postman的用户相关接口---Pre-request中添加下列代码：
+```script
+pm.request.addHeader("Authorization:eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJjbGFpbXMiOnsiaWQiOjgsInVzZXJuYW1lIjoiMTIzNDU2NyJ9LCJleHAiOjE3NTMxNDEyNzh9.Zmqk5bVdTeTyFGru40S8zEYjm5_73uXSRnNjDDs3X3k");
+```
