简要学习了ORPS

--- a/Java Web笔记/10.Anki日语背词系统.md
+++ b/Java Web笔记/10.Anki日语背词系统.md
@@ -32,7 +32,10 @@ create table review_log(
     ease_factor double not null  
 )
 ```
-## 二、实体类
+word表：
+```sql
+
+```
 ## 三、SM2算法
 要求：easeFactor、quality（0-5）、interval、repetition
 ### (1) easeFactor计算公式
@@ -43,6 +46,26 @@ ef' = ef + (0.1 - vague \* (0.08 + vague \* 0.02))，Math.max(1.3,newEf);
 0.1,0.08,0.02为sm2算法默认统计参数
 ### (2) 主逻辑
 
-按照quality，preRept，prevInterval，ef，进行newEaseFactor，
-## 四、单词增删改查（完成）
-## 五、用户基础功能（）
+按照quality，preRept，prevInterval，ef，进行newEaseFactor。
+### (3)复习单词的运用。
+通过以上核心算法，当用户从前端传quality后，可以通过quality得知 
+## 四、单词增删改查
+#### **(1) 单词管理模块**
+- **添加单词**：支持手动添加或通过外部词典 API 自动添加。
+- **修改单词**：可编辑释义、例句等内容。
+- **删除单词**：移除不需要的词条。
+- **模糊查询单词**：方便快速搜索。
+- **返回所有单词**：支持批量获取，便于列表展示。
+## 五、用户基础功能
+1. **用户注册**
+	- 创建新用户账号，存储用户名、邮箱、密码（哈希处理后存储，使用 bcrypt）。    
+	- 校验用户名是否唯一。
+2. **用户登录**
+	- 验证账号和密码。
+	- 登录成功后返回 JWT（JSON Web Token）。
+	- 分为管理员账号与普通用户账号。
+3. **注销用户**
+    - 删除用户账号及其相关数据。
+## 六、管理员功能
+1. **封禁用户**
+2. 
